# pyls-mypy

./: .pre-commit-config.yaml  .travis.yml  LICENSE  MANIFEST.in  README.rst  mypy.ini  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: python-package.yml
mypy_ls/: plugin.py
pyls_mypy/: _version.py  plugin.py
pylsp_mypy/: plugin.py
test/: test_plugin.py
