[metadata]
name = mypy-ls
author = Tom van Ommeren, Richard Kellnberger
description = Mypy linter for the Python LSP Server
url = https://github.com/Richardk2n/pyls-mypy
long_description = file: README.rst
license='MIT'
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Topic :: Software Development
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
python_requires = >= 3.6
packages = find:
install_requires =
    python-lsp-server
    mypy


[options.entry_points]
pylsp = mypy_ls = mypy_ls.plugin

[options.extras_require]
test =
    tox
    pytest
    pytest-cov
    coverage
    mock

[options.packages.find]
exclude =
    contrib
    docs
    test
