[metadata]
name = pylsp-mypy
author = Tom van Ommeren, Richard Kellnberger
description = Mypy linter for the Python LSP Server
url = https://github.com/python-lsp/pylsp-mypy
long_description = file: README.rst
license='MIT'
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Topic :: Software Development
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
python_requires = >= 3.6
packages = find:
install_requires =
    python-lsp-server
    mypy
    toml


[options.entry_points]
pylsp = pylsp_mypy = pylsp_mypy.plugin

[options.extras_require]
test =
    tox
    pytest
    pytest-cov
    coverage

[options.packages.find]
exclude =
    contrib
    docs
    test
